--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
     </div>
 </header>
 <section>
-    <div id="info3">...</div>
+    <div id="info3">....</div>
 </section>
 <section>
         <div id="info1">...</div>
