--- a/index.html
+++ b/index.html
@@ -23,6 +23,9 @@
             </ul>
         </div>
     </div>
+    <div class="container column">
+    <p1 id="banner_title">Best Performance & Responsive WebSite</p1>
+    </div>
 </header>
 <section>
     <div id="info3">....</div>
