--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
         </div>
     </div>
     <div class="container column">
-    <p1 id="banner_title">Best Performance & Responsive WebSite</p1>
+   <!-- <p1 id="banner_title">Best Performance & Responsive WebSite</p1> -->
     </div>
 </header>
 <section>
