--- a/index.html
+++ b/index.html
@@ -13,6 +13,8 @@
     <div class="container"> 
         <div class="logo">
             <a href=""><img id="logo" src="assets/images/logo2.png"/><img id="logo2" src="assets/images/logo.png"/></a>
+            <div id="banner_title1">Best Perfomance & Perfect Desing WebSite</div>
+            <div id="banner_title2"><div id="banner_button">Contact US</div></div>
         </div>
         <div class="socialmedia">
             <ul>
@@ -20,6 +22,7 @@
                 <li><a href=""><img id="instagram" src="assets/images/Instagram.png" height="40px"/><img id="instagram2" src="assets/images/Instagram_1.png" height="40px"/></a></li>
                 <li><a href=""><img id="linkedin" src="assets/images/Linkedin.png" height="40px"/><img id="linkedin2" src="assets/images/Linkedin_1.png" height="40px"/></a></li>
                 <li><a href=""><img id="github" src="assets/images/Github.png" height="40px"/><img id="github2" src="assets/images/Github_1.png" height="40px"/></a></li>
+                <li><a href=""><img id="youtube" src="assets/images/Youtube.png" height="40px"/><img id="youtube2" src="assets/images/Youtube_1.png" height="40px"/></a></li>
             </ul>
         </div>
     </div>
