--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
     <div class="container"> 
         <div class="logo">
             <a href=""><img id="logo" src="assets/images/logo2.png"/><img id="logo2" src="assets/images/logo.png"/></a>
-            <div id="banner_title1">Best Perfomance & Perfect Desing WebSite</div>
+            <div id="banner_title1">Best Perfomance & Perfect Design WebSite</div>
             <div id="banner_title2"><a href=""><div id="banner_button">Contact US</div></a></div>
         </div>
         <div class="socialmedia">
