--- a/index.html
+++ b/index.html
@@ -27,8 +27,22 @@
         </div>
     </div>
 </header>
-<section>
-    <div id="info3">....</div>
+<section class="maininfo">
+    <div id="maininfo1">
+        <div class="infotitle">WebSite For Business</div>
+        <div class="imageinfo"><img src="assets/images/imageinfo1.jpg"/></div>
+        <div class="infodesc">We'll help you create a beautiful website to impress and engage new customers – and establish your business online</div>
+    </div>
+    <div id="maininfo2">
+        <div class="infotitle">Personal Brand</div>
+        <div class="imageinfo"><img src="assets/images/imageinfo2.jpg"/></div>
+        <div class="infodesc">Personal brand is how you promote yourself. It is the unique combination of skills, experience, and personality that you want the world</div>
+    </div>
+    <div id="maininfo3">
+        <div class="infotitle">MarketPlace</div>
+        <div class="imageinfo"><img src="assets/images/imageinfo3.jpg"/></div>
+        <div class="infodesc">An online marketplace is a website or app that facilitates shopping from many different sources</div>
+    </div>
 </section>
 <section>
         <div id="info1">...</div>
