--- a/index.html
+++ b/index.html
@@ -31,17 +31,17 @@
     <div id="maininfo1">
         <div class="infotitle">WebSite For Business</div>
         <div class="imageinfo"><img src="assets/images/imageinfo1.jpg"/></div>
-        <div class="infodesc">We'll help you create a beautiful website to impress and engage new customers – and establish your business online</div>
+        <div class="infodesc"><p>We'll help you create a beautiful website to impress and engage new customers – and establish your business online</p></div>
     </div>
     <div id="maininfo2">
         <div class="infotitle">Personal Brand</div>
         <div class="imageinfo"><img src="assets/images/imageinfo2.jpg"/></div>
-        <div class="infodesc">Personal brand is how you promote yourself. It is the unique combination of skills, experience, and personality that you want the world</div>
+        <div class="infodesc"><p>Personal brand is how you promote yourself. It is the unique combination of skills, experience, and personality that you want the world</p></div>
     </div>
     <div id="maininfo3">
         <div class="infotitle">MarketPlace</div>
         <div class="imageinfo"><img src="assets/images/imageinfo3.jpg"/></div>
-        <div class="infodesc">An online marketplace is a website or app that facilitates shopping from many different sources</div>
+        <div class="infodesc"><p>An online marketplace is a website or app that facilitates shopping from many different sources</p></div>
     </div>
 </section>
 <section>
