--- a/index.html
+++ b/index.html
@@ -28,24 +28,27 @@
     </div>
 </header>
 <section class="maininfo">
+    <div id="blockinfo">
+        <div class="infotitle"><p></p></div>
+    </div>
     <div id="maininfo1">
-        <div class="infotitle">WebSite For Business</div>
-        <div class="imageinfo"><img src="assets/images/imageinfo1.jpg"/></div>
+        <div class="infotitle"><p>WebSite For Business</p></div>
         <div class="infodesc"><p>We'll help you create a beautiful website to impress and engage new customers – and establish your business online</p></div>
     </div>
     <div id="maininfo2">
-        <div class="infotitle">Personal Brand</div>
-        <div class="imageinfo"><img src="assets/images/imageinfo2.jpg"/></div>
+        <div class="infotitle"><p>Personal Brand</p></div>
         <div class="infodesc"><p>Personal brand is how you promote yourself. It is the unique combination of skills, experience, and personality that you want the world</p></div>
     </div>
     <div id="maininfo3">
-        <div class="infotitle">MarketPlace</div>
-        <div class="imageinfo"><img src="assets/images/imageinfo3.jpg"/></div>
+        <div class="infotitle"><p>MarketPlace</p></div>
         <div class="infodesc"><p>An online marketplace is a website or app that facilitates shopping from many different sources</p></div>
     </div>
 </section>
 <section>
-        <div id="info1">...</div>
+        <div id="info1">
+            
+
+        </div>
         <div id="info2">...</div>
         <div id="info3">...</div>
 </section>
