--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
         <div class="infodesc"><p>We'll help you create a beautiful website to impress and engage new customers – and establish your business online</p></div>
     </div>
     <div id="maininfo2">
-        <div class="infotitle"><p>Personal Brand</p></div>
+        <div class="infotitle"><p>Personal Branding</p></div>
         <div class="infodesc"><p>Personal brand is how you promote yourself. It is the unique combination of skills, experience, and personality that you want the world</p></div>
     </div>
     <div id="maininfo3">
