--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
         <div class="logo">
             <a href=""><img id="logo" src="assets/images/logo2.png"/><img id="logo2" src="assets/images/logo.png"/></a>
             <div id="banner_title1">Best Perfomance & Perfect Design WebSite</div>
-            <div id="banner_title2"><a href=""><div id="banner_button">Contact US ▼ </div></a></div>
+            <div id="banner_title2"><a href=""mailto:snakersandbox@gmail.com?Subject=site%20suggestion""><div id="banner_button">Contact US ▼ </div></a></div>
         </div>
         <div class="socialmedia">
             <ul>
@@ -30,15 +30,15 @@
 <section class="maininfo">
     <div id="maininfo1">
         <div class="infotitle"><p>WebSite For Business</p></div>
-        <div class="infodesc"><p>We'll help you create a beautiful website to impress and engage new customers – and establish your business online</p><div class="infobutton"><a href="" class="ibutton">Read More ▼ </a></div></div> 
+        <div class="infodesc"><p>We'll help you create a beautiful website to impress and engage new customers – and establish your business online</p><div class="infobutton"><a href="#info1" class="ibutton">Read More ▼ </a></div></div> 
     </div>
     <div id="maininfo2">
         <div class="infotitle"><p>Personal Branding</p></div>
-        <div class="infodesc"><p>Personal brand is how you promote yourself. The unique combination of skills, experience, and personality that you need</p><div class="infobutton"><a href="" class="ibutton">Read More ▼ </a></div></div>
+        <div class="infodesc"><p>Personal brand is how you promote yourself. The unique combination of skills, experience, and personality that you need</p><div class="infobutton"><a href="#info2" class="ibutton">Read More ▼ </a></div></div>
     </div>
     <div id="maininfo3">
         <div class="infotitle"><p>MarketPlace</p></div>
-        <div class="infodesc"><p>An online marketplace is a website or app that facilitates shopping from many different sources</p><div class="infobutton"><a href="" class="ibutton">Read More ▼ </a></div></div> 
+        <div class="infodesc"><p>An online marketplace is a website or app that facilitates shopping from many different sources</p><div class="infobutton"><a href="#info3" class="ibutton">Read More ▼ </a></div></div> 
     </div>
 </section>
 <section class="column">
@@ -46,16 +46,19 @@
             <p class="infot">WebSite For Business</p>
             <img src="assets/images/imageinfo1.jpg"/>
             <p class="infod">We'll help you create a beautiful website to impress and engage new customers – and establish your business online</p>
+            <div class="buybutton"><a href="" class="bbutton">💻 Buy it 💰 </a></div>
         </div>
         <div id="info2">
             <p class="infot">Personal Brand</p>
             <img src="assets/images/imageinfo2.jpg"/>
             <p class="infod">Personal brand is how you promote yourself. The unique combination of skills, experience, and personality that you need</p>
+            <div class="buybutton"><a href="" class="bbutton"> 💻 Buy it 💰 </a></div>
         </div>
         <div id="info3">
             <p class="infot">MarketPlace</p>
             <img src="assets/images/imageinfo3.jpg"/>
             <p class="infod">An online marketplace is a website or app that facilitates shopping from many different sources</p>
+            <div class="buybutton"><a href="" class="bbutton"> 💻 Buy it 💰 </a></div>
         </div>
 </section>
 <footer class="foot">
