--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
         <div class="logo">
             <a href=""><img id="logo" src="assets/images/logo2.png"/><img id="logo2" src="assets/images/logo.png"/></a>
             <div id="banner_title1">Best Perfomance & Perfect Design WebSite</div>
-            <div id="banner_title2"><a href=""mailto:snakersandbox@gmail.com?Subject=site%20suggestion""><div id="banner_button">Contact US ▼ </div></a></div>
+            <div id="banner_title2"><a href="https://wa.me/qr/WQ7UBQXL2YBMG1"><div id="banner_button">Contact US ▼ </div></a></div>
         </div>
         <div class="socialmedia">
             <ul>
