--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
         <div class="logo">
             <a href=""><img id="logo" src="assets/images/logo2.png"/><img id="logo2" src="assets/images/logo.png"/></a>
             <div id="banner_title1">Best Perfomance & Perfect Design WebSite</div>
-            <div id="banner_title2"><a href=https://api.whatsapp.com/send?phone=12345292024&text=Obrigado%20por%20testar%20o%20link!><div id="banner_button">Contact US ▼ </div></a></div>
+            <div id="banner_title2"><a href=https://api.whatsapp.com/send?phone=12345292024&text=Hey!%20I'm%20Interested%20in%20Building%20a%20WebSite.%20Could%20You%20Please%20Help%20Me%20?><div id="banner_button">Contact US ▼ </div></a></div>
         </div>
         <div class="socialmedia">
             <ul>
@@ -34,7 +34,7 @@
     </div>
     <div id="maininfo2">
         <div class="infotitle"><p>Personal Branding</p></div>
-        <div class="infodesc"><p>Personal brand is how you promote yourself. The unique combination of skills, experience, and personality that you need</p><div class="infobutton"><a href="#info2" class="ibutton">Read More ▼ </a></div></div>
+        <div class="infodesc"><p>Personal branding is how you promote yourself. The unique combination of skills, experience, and personality that you need</p><div class="infobutton"><a href="#info2" class="ibutton">Read More ▼ </a></div></div>
     </div>
     <div id="maininfo3">
         <div class="infotitle"><p>MarketPlace</p></div>
@@ -51,7 +51,7 @@
         <div id="info2">
             <p class="infot">Personal Brand</p>
             <img src="assets/images/imageinfo2.jpg"/>
-            <p class="infod">Personal brand is how you promote yourself. The unique combination of skills, experience, and personality that you need</p>
+            <p class="infod">Personal branding is how you promote yourself. The unique combination of skills, experience, and personality that you need</p>
             <div class="buybutton"><a href="" class="bbutton"> 💻 Buy it 💰 </a></div>
         </div>
         <div id="info3">
