--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
         <div class="logo">
             <a href=""><img id="logo" src="assets/images/logo2.png"/><img id="logo2" src="assets/images/logo.png"/></a>
             <div id="banner_title1">Best Perfomance & Perfect Design WebSite</div>
-            <div id="banner_title2"><a href=https://api.whatsapp.com/send?phone=12345292024&text=Hey!%20I'm%20Interested%20in%20Building%20a%20WebSite.%20Would%20You%20Help%20Me%20?><div id="banner_button">Contact US ▼ </div></a></div>
+            <div id="banner_title2"><a href=https://api.whatsapp.com/send?phone=12345292024&text=Hey!%20I'm%20Interested%20in%20Building%20a%20WebSite.%20Could%20You%20Please%20Help%20Me%20?><div id="banner_button">Contact US ▼ </div></a></div>
         </div>
         <div class="socialmedia">
             <ul>
