--- a/index.html
+++ b/index.html
@@ -3,7 +3,9 @@
 <head>
   <meta charset="UTF8"/>
   <meta id="viewport" name="viewport" content="width=device-width, user-scalable=0">
-
+  <link rel="icon" 
+      type="image/x-icon" 
+      href="assets/images/favicon.ico" />
   <title>Site Building</title>
   <link rel="stylesheet" type="text/css" href="assets/css/template.css" />
 
