--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
     </div>
     <div id="maininfo2">
         <div class="infotitle"><p>Personal Branding</p></div>
-        <div class="infodesc"><p>Personal brand is how you promote yourself. The unique combination of skills, experience, and personality that you need</p><div class="infobutton"><a href="#info2" class="ibutton">Read More ▼ </a></div></div>
+        <div class="infodesc"><p>Personal branding is how you promote yourself. The unique combination of skills, experience, and personality that you need</p><div class="infobutton"><a href="#info2" class="ibutton">Read More ▼ </a></div></div>
     </div>
     <div id="maininfo3">
         <div class="infotitle"><p>MarketPlace</p></div>
@@ -51,7 +51,7 @@
         <div id="info2">
             <p class="infot">Personal Brand</p>
             <img src="assets/images/imageinfo2.jpg"/>
-            <p class="infod">Personal brand is how you promote yourself. The unique combination of skills, experience, and personality that you need</p>
+            <p class="infod">Personal branding is how you promote yourself. The unique combination of skills, experience, and personality that you need</p>
             <div class="buybutton"><a href="" class="bbutton"> 💻 Buy it 💰 </a></div>
         </div>
         <div id="info3">
